[project]
name = "finalfinal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tlanguebien", email = "tlanguebien@gmail.com" }
]
requires-python = ">=3.9"
dependencies = ["reportlab"]

[project.scripts]
finalfinal = "finalfinal:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

